force-app/main/default/objects/SBQQ__UpgradeSource__c/fields/SBQQ__UpgradeConversionRate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeConversionRate__c</fullName>
    <description>The conversion rate between the upgrade product and the source product.</description>
    <inlineHelpText>Specify a ratio for quantity conversion from Upgrade Source to Upgrade Product. e.g. &quot;5:1&quot; indicates that 5 units of Upgrade Source convert to 1 unit of Upgrade Product. If blank, no Upgrade Conversion Rate is enforced.</inlineHelpText>
    <label>Upgrade Conversion Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>