force-app/main/default/objects/SBQQ__UpgradeSource__c/validationRules/SBQQ__Conversion_Rate_Must_Fit_Ratio_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Conversion_Rate_Must_Fit_Ratio_Format</fullName>
    <active>true</active>
    <description>Guarantee that the Upgrade Conversion Rate is in the form of a ratio.</description>
    <errorConditionFormula>NOT(REGEX(BLANKVALUE(SBQQ__UpgradeConversionRate__c, &quot;1:1&quot;), &quot;[1-9][\\d]*:[1-9][\\d]*&quot;))</errorConditionFormula>
    <errorMessage>Conversion Rate must be represented as a ratio of the format &quot;Upgrade Source:Upgrade Product&quot;.</errorMessage>
</ValidationRule>